--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
         "vue": "^3.2.37"
     },
     "dependencies": {
-        "bootstrap-icons": "^1.11.3"
+        "bootstrap-icons": "^1.11.3",
+        "fastbootstrap": "^2.2.0",
+        "jquery": "^3.7.1"
     }
 }
