--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.3",
+        "livewire/livewire": "^3.4",
         "spatie/laravel-permission": "^6.3"
     },
     "require-dev": {
